{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 17,
  "lineage": "f2ce7ca9-23bf-748a-021b-3e362da7bc26",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c332520bd9cedb4",
            "arn": "arn:aws:ec2:eu-west-3:251198450696:instance/i-0e4bc4ae64599d86e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "datascientest-wp-ebs"
                },
                "tags_all": {
                  "Name": "datascientest-wp-ebs"
                },
                "throughput": 125,
                "volume_id": "vol-0cb39a740ce32a973",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4bc4ae64599d86e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Datascientest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04eb4f1eb0d336db8",
            "private_dns": "ip-10-0-1-62.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.62",
            "public_dns": "ec2-35-180-36-64.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.36.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06ed37fc930abb60f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d97b310297b256d9",
            "tags": {
              "Name": "datascientest-wp-ec2-wp"
            },
            "tags_all": {
              "Name": "datascientest-wp-ec2-wp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09670ffa9eb5beb1a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "module.networking.aws_security_group.web",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:251198450696:internet-gateway/igw-034140a0e7ac22c4c",
            "id": "igw-034140a0e7ac22c4c",
            "owner_id": "251198450696",
            "tags": {
              "Name": "datascientest-wp-igw"
            },
            "tags_all": {
              "Name": "datascientest-wp-igw"
            },
            "vpc_id": "vpc-002b5f9e5c5e07453"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:251198450696:route-table/rtb-020688aba5c78d30c",
            "id": "rtb-020688aba5c78d30c",
            "owner_id": "251198450696",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034140a0e7ac22c4c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "datascientest-wp-rt-public"
            },
            "tags_all": {
              "Name": "datascientest-wp-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b5f9e5c5e07453"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085a8e9ba80d3c8e8",
            "route_table_id": "rtb-020688aba5c78d30c",
            "subnet_id": "subnet-0d97b310297b256d9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b371c5131abc271d",
            "route_table_id": "rtb-020688aba5c78d30c",
            "subnet_id": "subnet-0996de32944daa85c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:251198450696:security-group/sg-09670ffa9eb5beb1a",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09670ffa9eb5beb1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "datascientest-wp-sg-web",
            "name_prefix": "",
            "owner_id": "251198450696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "datascientest-wp-sg-web"
            },
            "tags_all": {
              "Name": "datascientest-wp-sg-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b5f9e5c5e07453"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:251198450696:subnet/subnet-0d97b310297b256d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d97b310297b256d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251198450696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "datascientest-wp-public-eu-west-3a"
            },
            "tags_all": {
              "Name": "datascientest-wp-public-eu-west-3a"
            },
            "vpc_id": "vpc-002b5f9e5c5e07453"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:251198450696:subnet/subnet-0996de32944daa85c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0996de32944daa85c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251198450696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "datascientest-wp-public-eu-west-3b"
            },
            "tags_all": {
              "Name": "datascientest-wp-public-eu-west-3b"
            },
            "vpc_id": "vpc-002b5f9e5c5e07453"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:251198450696:vpc/vpc-002b5f9e5c5e07453",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b778f9aa1b3c74aa",
            "default_route_table_id": "rtb-033a21e6c346f858a",
            "default_security_group_id": "sg-05c7478a1a61f61b4",
            "dhcp_options_id": "dopt-02b6fd0948ca4a428",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-002b5f9e5c5e07453",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-033a21e6c346f858a",
            "owner_id": "251198450696",
            "tags": {
              "Name": "datascientest-wp-vpc"
            },
            "tags_all": {
              "Name": "datascientest-wp-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:251198450696:security-group/sg-0f4ee1d193f1be020",
            "description": "Allow MySQL from web SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4ee1d193f1be020",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from web SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09670ffa9eb5beb1a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "datascientest-wp-sg-db",
            "name_prefix": "",
            "owner_id": "251198450696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "datascientest-wp-sg-db"
            },
            "tags_all": {
              "Name": "datascientest-wp-sg-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b5f9e5c5e07453"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.web",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}